--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-auth-session": "~3.0.0",
+    "expo-random": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
@@ -27,8 +29,7 @@
     "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.12.0",
     "react-native-video": "^5.1.1",
-    "react-native-web": "~0.13.12",
-    "expo-random": "~10.0.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
