--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.12.0",
     "react-native-video": "^5.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-av": "~8.7.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
